# backup

./: .gitconfig  .gitignore  .gitmessage  CHECKLIST.md  COMPLETION_REPORT.txt  COMPLETION_REPORT_v4.md  CONDA_FIX_QUICK_START.md  CONDA_PATH_FIX_REPORT.md  EXEC_SUMMARY.md  FINAL_SUMMARY.md  FIX_REPORT.txt  PROJECT_COMPLETE.txt  Phase2代碼檢查.md  README.md  READY_TO_INSTALL.md  SDD_COMPLETION_REPORT.txt  SETUP_FINAL.md  SETUP_GUIDE.md  SETUP_GUIDE_v2.md  SETUP_REPORT.md  TASK_COMPLETE.txt  UPDATE_SUMMARY.md  backup_tool.py  check_env.bat  check_env.py  commit_fix.bat  commit_fix.py  create_backup_env.ps1  diagnose_conda.ps1  do_commit.bat  environment.yml  fix_conda_path.bat  git_commit.ps1  git_commit.py  init_git.bat  init_git.py  install_all.ps1  pyproject.toml  requirements.txt  run_backup_tool.bat  (+11 more)
.github/: copilot-instructions.md
docs/: Phase1代碼檢查.md  Phase1完成報告.md  Phase1實施清單.md  spec.md  操作指南.md
src/: backup_tool.py
tests/: test_backup.py
