[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-delta-backup"
version = "1.0.0"
description = "簡易差異備份工具 - 為 Windows 設計的輕量級備份工具"
readme = "README.md"
authors = [
    {name = "Backup Tool Dev", email = "backup-tool@local"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["backup", "delta-backup", "windows", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities"
]

dependencies = [
    "python-dateutil>=2.8.2",
    "pytz>=2023.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pylint>=2.17"
]

[project.urls]
Homepage = "https://github.com/user/simple-delta-backup"
Documentation = "https://github.com/user/simple-delta-backup/wiki"
Repository = "https://github.com/user/simple-delta-backup.git"
Issues = "https://github.com/user/simple-delta-backup/issues"

[project.scripts]
backup-tool = "backup_tool:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint]
max-line-length = 100
disable = ["C0111", "C0103"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test_backup.py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
